Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8210422

runtime/modules/ModuleStress/ExportModuleStressTest.java - assertion failed: address not aligned: 0x00000008baadbabe

    XMLWordPrintable

Details

    • b11
    • Verified

    Backports

      Description

        Mach5 test failed:
        open/test/hotspot/jtreg/runtime/modules/ModuleStress/ExportModuleStressTest.java

        Snippet of test log:
        ----------System.err:(40/2495)----------
         stdout: [# To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/klass.inline.hpp:66
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S419/frameworks/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-0005/executors/b85751ab-316e-4701-a0cd-9a949d51b4e8/runs/c13686f3-8a4b-415a-a724-6c31be32365b/workspace/open/src/hotspot/share/oops/klass.inline.hpp:66), pid=7666, tid=7769
        # assert(check_klass_alignment(result)) failed: address not aligned: 0x00000008baadbabe
        #
        # JRE version: Java(TM) SE Runtime Environment (12.0) (fastdebug build 12-internal+0-jdk12-jdk.345)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 12-internal+0-jdk12-jdk.345, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
        # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # An error report file with more information is saved as:
        # /scratch/opt/mach5/mesos/work_dir/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S283473/frameworks/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-0005/executors/b7220a9c-ee76-4b92-872c-3ccbf4c46b1c/runs/011cbdc7-290b-4fca-a931-7ae483696182/testoutput/jtreg/JTwork/scratch/0/hs_err_pid7666.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        Current thread is 7769
        Dumping core ...
        ];
         stderr: []
         exitValue = 134

        java.lang.RuntimeException: 'failed: 0' missing from stdout/stderr

        at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:150)
        at ExportModuleStressTest.main(ExportModuleStressTest.java:77)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:566)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
        at java.base/java.lang.Thread.run(Thread.java:834)

        JavaTest Message: Test threw exception: java.lang.RuntimeException: 'failed: 0' missing from stdout/stderr

        JavaTest Message: shutting down test

        STATUS:Failed.`main' threw exception: java.lang.RuntimeException: 'failed: 0' missing from stdout/stderr

        Attachments

          Issue Links

            Activity

              People

                coleenp Coleen Phillimore
                ljiang Leo Jiang (Inactive)
                Votes:
                0 Vote for this issue
                Watchers:
                7 Start watching this issue

                Dates

                  Created:
                  Updated:
                  Resolved: